--- a/css/main.css
+++ b/css/main.css
@@ -70,9 +70,10 @@
 }
 
 .gallery_row {
-    overflow-x: scroll;
+    overflow-x: auto;
     display: flex;
     gap: 1.25vw;
+    scroll-snap-type: x mandatory;
 }
 
 .gallery_row img {
@@ -80,6 +81,7 @@
     aspect-ratio: 24.69 / 17.69;
     width: 24.7em;
     height: auto;
+    scroll-snap-align: start;
 }
 
 .gallery_row::-webkit-scrollbar {
@@ -329,7 +331,7 @@
     position: absolute;
     z-index: 100002;
 
-    background: rgba(101, 95, 175, 0.8);
+    background-color: color-mix(in srgb, var(--main-color) 80%, rgba(0, 0, 0, 0));
     color: white;
 
     font-size: 2em;
@@ -339,6 +341,11 @@
     cursor: pointer;
     user-select: none;
     padding: 0.125em;
+}
+
+.popup_close:hover,
+.arrow:hover {
+    background-color: color-mix(in srgb, var(--accent) 80%, rgba(0, 0, 0, 0.5));
 }
 
 .arrow#arrow_left {
