change color on hover

--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,10 @@
     background: var(--main-color);
 }
 
+.course:hover *{
+    color: white;
+}
+
 .course:hover .button {
     background: white;
     color: black;
