--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,75 @@
 footer {
-    background: var(--main-color);
-    height: 6.75em;
+    background-image: url("../assets/img/elements/footer/footer_bg.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+/*Секция contacts*/
+.contacts {
+    display: flex;
+    padding: min(16vw, 16em) 0 min(12vw, 12em) 0;
+    margin: 0 10vw;
+}
+
+.contacts,
+.contacts_about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contacts_about {
+    gap: 1.5em;
+    text-align: center;
+}
+
+.contacts_about h2 {
+    color: var(--text-on-blue);
+}
+
+.contacts_about p {
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 138%;
+    text-align: center;
+    color: var(--text-on-blue);
+}
+
+.contacts hr {
+    width: 38%;
+}
+
+.contacts_links {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    margin-top: 4.375em;
+}
+
+.contacts_links a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+}
+
+.contacts_links a p {
+    font-weight: 600;
+    font-size: 1.5em;
+    color: var(--text-on-blue);
+}
+
+.contacts_links_img {
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    aspect-ratio: 1 / 1;
+    width: 9.375em;
+    height: auto;
+}
+
+/*Конец секции contacts*/
