--- a/css/main.css
+++ b/css/main.css
@@ -1,66 +1,3 @@
-/*Секция top_about*/
-.top_about {
-    --img-top-left-margin: 3.25em;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-left: 6.25em;
-    margin-top: calc(2.5em + var(--img-top-left-margin));
-}
-
-.top_about_left {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75em;
-    justify-content: center;
-}
-
-.top_about_left h1 {
-    font-weight: 500;
-    font-size: 2.5em;
-    color: #000;
-}
-
-.top_about_left p {
-    font-weight: 500;
-    font-size: 1.5em;
-    color: #151515;
-}
-
-.top_about_left .button {
-    margin-top: 2em;
-    font-size: 1.5em;
-}
-
-.top_about_right {
-    margin-left: 4em;
-    display: flex;
-    justify-content: end;
-}
-
-.top_about_right_img_block {
-    width: max-content;
-}
-
-.top_about_right img {
-    max-width: 41em;
-    width: clamp(16em, 41vw, 41em);
-    aspect-ratio: 553 / 556;
-    height: auto;
-    z-index: 10;
-}
-
-.top_about_right_img_block::before {
-    content: '';
-    position: absolute;
-    top: calc(-1 * var(--img-top-left-margin));
-    left: calc(-1 * var(--img-top-left-margin));
-    width: 100%;
-    height: 100%;
-    background: var(--main-color);
-}
-
-/*Конец секции top_about*/
-
 /*Секция gallery*/
 .gallery {
     display: flex;
@@ -82,6 +19,7 @@
     width: 24.7em;
     height: auto;
     scroll-snap-align: start;
+    cursor: pointer;
 }
 
 .gallery_row::-webkit-scrollbar {
@@ -89,79 +27,54 @@
 }
 
 /*Конец секции gallery*/
-
-/*Секция we_the_best*/
-.we_the_best_block::before {
-    content: '';
-    position: absolute;
-    top: 0;
-
-    width: 100%;
-    height: 2em;
-    background-image: url("../assets/img/quote_top.svg");
-
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+.about_us {
+    margin-top: 5.125em;
+    overflow-x: hidden;
 }
 
-.we_the_best_block::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-
-    width: 100%;
-    height: 2em;
-    background-image: url("../assets/img/quote_bottom.svg");
-
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+.about_us h2 {
+    width: max-content;
 }
 
-.we_the_best_block {
-    aspect-ratio: 51.25 / 20.44;
-    width: min(51.25em, 80vw);
-    height: auto;
-
-    margin: 8em auto 0 auto;
+.about_us_content {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
 }
 
-.we_the_best_block_content {
+.about_us_content_description {
     display: flex;
     flex-direction: column;
-    gap: 1em;
-    text-align: center;
-    margin: 0 4em;
+    gap: 1.5em;
+    width: min-content;
 }
 
-.we_the_best_block_content p {
-    font-weight: 500;
-    font-size: 1.5rem;
-    color: #000;
+.about_us_content_description p {
+    font-weight: 300;
+    font-size: 1.5em;
+    color: var(--text-on-white);
 }
 
+.about_us_content img {
+    transform: translateX(10vw);
+}
 /*Конец секции we_the_best*/
 
 /*Секция course*/
-.course_block {
-    margin-top: 8em;
-}
-
 .course_block {
     display: flex;
     flex-direction: column;
     gap: 2.5em;
 
-    padding: 0 6.25em;
-    margin: 0 auto;
+    padding: 4.375em 6.25em 2.5em 6.25em;
+    margin-top: 8em;
+
+    border-radius: 3.12em;
+    background: #f5f7fb;
 }
 
 .course_block h2 {
-    align-self: center;
+    align-self: start;
 }
 
 .course_grid {
@@ -171,131 +84,76 @@
 }
 
 .course {
+    border-radius: 3.12em;
+    cursor: pointer;
+    background: var(--card);
+    padding: 0.75em;
+    border: 1px solid var(--card);
+}
+
+.course_content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1em;
+    padding: 2em 1.25em;
 
-    border: 3px solid var(--main-color);
+    color: var(--text-on-blue);
 
-    padding: 5.625em 2.5em;
-    cursor: pointer;
-}
-
-.course:hover {
-    background: var(--main-color);
-}
-
-.course:hover *{
-    color: white;
-}
-
-.course:hover .button {
-    background: white;
-    color: black;
-}
-
-.course:hover .button:hover {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    border: 1px solid var(--white);
+    border-radius: 2em;
 }
 
 .course img {
     aspect-ratio: 1 / 1;
     width: 11.62em;
     height: auto;
-    margin-bottom: 3.75em;
+    margin-bottom: 2.875em;
 }
 
 .course_title {
     font-weight: 600;
-    font-size: 1.5rem;
-    color: #000;
+    font-size: 1.5em;
+    color: var(--text-on-blue);
     text-align: center;
 }
 
 .course_description {
     font-weight: 500;
-    font-size: 0.94rem;
+    font-size: 0.94em;
     text-align: center;
-    color: #3b3b3b;
+    color: var(--text-on-blue);
 }
 
 .course .button {
     margin-top: 1.75em;
 }
+
+.course:hover {
+    background: var(--hover-card);
+    border: 1px solid var(--card);
+}
+
+.course:hover * {
+    color: var(--text-on-white);
+}
+
+.course:hover .button {
+    background: var(--card);
+    color: var(--white);
+}
+
+.course:hover .button:hover {
+    box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.1), 2px 12px 12px 0 rgba(0, 0, 0, 0.09), 4px 26px 16px 0 rgba(0, 0, 0, 0.05), 7px 47px 19px 0 rgba(0, 0, 0, 0.01), 11px 73px 21px 0 rgba(0, 0, 0, 0);
+    background: var(--hover-blue-button);
+    color: var(--white);
+}
+
+.course:hover .course_content {
+    border: 1px solid var(--card);
+}
 /*Конец секции course*/
-
-/*Секция contacts*/
-.contacts {
-    max-width: min(54em, 53vw);
-    margin: 5.75em auto 8em auto;
-}
-
-.contacts,
-.contacts_about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.contacts_about {
-    gap: 1.5em;
-    text-align: center;
-    margin-bottom: 4.375em;
-}
-
-.contacts_about p {
-    font-weight: 500;
-    font-size: 1.5rem;
-    line-height: 138%;
-    text-align: center;
-    color: #3b3b3b;
-}
-
-.contacts hr {
-    width: 38%;
-}
-
-.contacts_links {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-
-    margin-top: 3.75em;
-}
-
-.contacts_links a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2em;
-}
-
-.contacts_links a p {
-    font-weight: 600;
-    font-size: 1.5rem;
-    color: #000;
-}
-
-.contacts_links_img {
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    aspect-ratio: 1 / 1;
-    width: 5em;
-    height: auto;
-}
-
-.contacts_links_img_block {
-    background: var(--main-color);
-    border-radius: 50%;
-    padding: 1.125em;
-}
-
-/*Конец секции contacts*/
 
 /*Попап окно для галереи*/
 .popup {
