--- a/css/media.css
+++ b/css/media.css
@@ -1,23 +1,22 @@
-@media screen and (max-width: 1025px) {
-    .top_about {
-        --img-top-left-margin: 1.375em;
-        margin-left: 4em;
-        margin-top: calc(1.5em + var(--img-top-left-margin));
-    }
-
-    .top_about_left h1 {
-        font-size: 2.25em;
+@media screen and (max-width: 1051px) {
+    .top_about_left :is(p, .button) {
+        font-size: 1.25rem;
     }
 
     header {
-        padding: 2.5em 4em 1.5em 4em;
+        padding: 3.125em 0 1.5em 0;
+    }
+
+    .wrapper {
+        padding-right: 5em;
+        padding-left: 5em;
     }
 
     .gallery {
         margin-top: 7em;
     }
 
-    .we_the_best_block {
+    .about_us {
         margin: 5.25em auto 0 auto;
     }
 
@@ -51,25 +50,17 @@
         margin-bottom: 1.75em;
     }
 
-    .contacts_links_img {
-        width: 4.88em;
-    }
-
     .contacts {
-        max-width: calc(100% - 10em);
-        margin: 5.375em auto 5.375em auto;
+        margin: 0;
+        padding: 6em 0;
     }
 
-    .contacts_about {
-        margin-bottom: 4em;
-    }
-
-    .contacts hr {
-        width: 100%;
+    .contacts_about p {
+        font-size: 1.25rem;
     }
 
     .contacts_links {
-        margin-top: 4em;
+        margin-top: 3.5em;
     }
 
     .popup_content #modal_image {
@@ -77,27 +68,32 @@
     }
 }
 
+@media screen and (max-width: 950px) {
+    .top_about {
+        grid-template-columns: 3fr 2fr;
+    }
+}
+
 @media screen and (max-width: 881px) {
+    header {
+        background-image: url("../assets/img/elements/header/header_bg_clean_881.svg");
+    }
+
     .top_about_right {
         display: none;
     }
 
     .top_about {
         grid-template-columns: 1fr;
-        margin-right: 2.5em;
-        margin-left: 2.5em;
     }
 
-    .we_the_best_block {
-        width: 80%;
-        height: 20.44rem;
-
-        margin: 4em auto 0 auto;
+    .about_us {
     }
 
     .top_about_left {
         align-items: center;
         text-align: center;
+        gap: 1em;
     }
 
     .top_about_left h1 {
@@ -120,49 +116,8 @@
         padding: 1.75em 0.5em;
     }
 
-    .contacts_links_img {
-        width: 2.44em;
-    }
-
-    .contacts_links a {
-        gap: 0.375em;
-    }
-
-    .contacts_links_img_block {
-        padding: 0.625em;
-    }
-
-    .contacts_links a p {
-        font-size: 0.75rem;
-    }
-
-    .contacts {
-        max-width: calc(100% - 5em);
-        margin: 5.375em auto 5.375em auto;
-    }
-
-    .contacts_about {
-        margin-bottom: 2.25em;
-    }
-
-    .contacts hr {
-        width: 100%;
-    }
-
-    .contacts_links {
-        margin-top: 2.25em;
-    }
-
-    .contacts_about p {
-        font-size: 0.94rem;
-    }
-
-    .contacts_about h2 {
-        font-size: 1.25rem;
-    }
-
-    .contacts_about {
-        gap: 0.75em;
+    footer {
+        background-image: url("../assets/img/elements/footer/footer_bg_871.svg");
     }
 
     .popup_content #modal_image {
@@ -170,20 +125,32 @@
     }
 }
 
+@media screen and (max-width: 671px) {
+    .wrapper {
+        padding-left: 1.5em;
+        padding-right: 1.5em;
+    }
+}
+
 @media screen and (max-width: 571px) {
     header {
-        padding: 1.25em 4em 1.875em 4em;
+        padding: 2em 0 1.875em 0;
+        background-image: url("../assets/img/elements/header/header_bg_clean_571.svg");
+        background-size: cover;
+    }
+
+    header .top_about {
+        margin: 3.5em 0 6em 0;
+        height: max-content;
+    }
+
+    .header {
         align-items: center;
         justify-content: center;
         flex-direction: column;
     }
 
-    .header_logo_block img {
-        --width: 3.375em;
-        --height: 3.9375em;
-    }
-
-    header nav {
+    .header nav {
         display: none;
     }
 
@@ -193,18 +160,23 @@
 
     .header_menu_burger {
         position: absolute;
-        right: 4em;
+        right: 0;
         display: block;
     }
 
     header.activeBurgerMenu {
-        background: var(--main-color);
+        background: #0081f1;
         animation-name: showBurgerMenuHeaderAnimation;
         animation-duration: .3s;
+        border-radius: 0 0 2em 2em;
+    }
+
+    header.activeBurgerMenu .top_about {
+        display: none;
     }
 
     header.activeBurgerMenu .header_menu_burger {
-        top: 3em;
+        top: 0;
     }
 
     header.activeBurgerMenu nav {
@@ -213,17 +185,13 @@
         margin-top: 2.5em;
         animation-name: showBurgerMenuNavAnimation;
         animation-duration: .3s;
+        margin-bottom: 8em;
     }
 
     .header_menu_burger.active .header_menu_burger_img {
-        background-image: url("../assets/img/menu_burger_close.svg");
+        background-image: url("../assets/img/elements/header/menu_burger_close.svg");
         width: 1.5em;
         height: 1.5em;
-    }
-
-    .top_about_left {
-        align-items: center;
-        text-align: center;
     }
 
     .top_about_left h1 {
@@ -247,18 +215,12 @@
         margin-top: 4em;
     }
 
-    .we_the_best_block_content {
+    .about_us_content {
         gap: 0.875em;
         margin: 0;
     }
 
-    .we_the_best_block {
-        aspect-ratio: 350 / 215;
-        width: calc(100% - 2.5em);
-        height: auto;
-    }
-
-    .we_the_best_block_content p {
+    .about_us_content p {
         font-size: 0.94em;
     }
 
@@ -291,7 +253,36 @@
     }
 
     footer {
-        height: 3.25em;
+        background-image: url("../assets/img/elements/footer/footer_bg_571.svg");
+    }
+
+    .contacts {
+        padding: 3.125em 0 3.75em 0;
+    }
+
+    .contacts_links {
+        flex-direction: column;
+        gap: 2.875em;
+    }
+
+    .contacts_links_img {
+        width: 7em;
+    }
+
+    .contacts_links a {
+        gap: 0.75em;
+    }
+
+    .contacts_links a p {
+        font-size: 1.5rem;
+    }
+
+    .contacts_about h2 {
+        font-size: 1.75rem;
+    }
+
+    .contacts_about p {
+        font-size: 1rem;
     }
 
     .popup_content #modal_image {
