--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@
 .about_us {
     margin-top: 5.125em;
     overflow-x: hidden;
+    padding-bottom: 5em;
 }
 
 .about_us h2 {
@@ -37,16 +38,20 @@
 }
 
 .about_us_content {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /*justify-content: space-between;*/
     align-items: center;
 }
 
 .about_us_content_description {
     display: flex;
     flex-direction: column;
+    justify-content: start;
     gap: 1.5em;
-    width: min-content;
+    /*width: min-content;*/
+
+    margin: 3.75em 0 14.375em 0;
 }
 
 .about_us_content_description p {
@@ -56,8 +61,15 @@
 }
 
 .about_us_content img {
-    transform: translateX(10vw);
+    position: absolute;
+    right: 0;
+    top: -1.875em;
+
+    aspect-ratio: 557 / 524;
+    width: 36.75em;
+    height: auto;
 }
+
 /*Конец секции we_the_best*/
 
 /*Секция course*/
@@ -66,7 +78,8 @@
     flex-direction: column;
     gap: 2.5em;
 
-    padding: 4.375em 6.25em 2.5em 6.25em;
+    padding-top: 4.375em;
+    padding-bottom: 2.5em;
     margin-top: 8em;
 
     border-radius: 3.12em;
@@ -84,7 +97,7 @@
 }
 
 .course {
-    border-radius: 3.12em;
+    border-radius: 2em;
     cursor: pointer;
     background: var(--card);
     padding: 0.75em;
@@ -127,7 +140,11 @@
 }
 
 .course .button {
+    font-weight: 600;
+    font-size: 1rem;
     margin-top: 1.75em;
+    color: var(--text-button);
+    z-index: 10000;
 }
 
 .course:hover {
@@ -153,6 +170,7 @@
 .course:hover .course_content {
     border: 1px solid var(--card);
 }
+
 /*Конец секции course*/
 
 /*Попап окно для галереи*/
