--- a/css/common.css
+++ b/css/common.css
@@ -75,7 +75,7 @@ a {
 .button {
     background: var(--white);
     max-width: max-content;
-    padding: 12px 24px;
+    padding: 0.75em 1.5em;
     font-weight: 600;
     font-size: 1em;
     border-radius: 0.75em;
