--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@
 }
 
 header {
-    background-image: url("../assets/img/elements/header/header_bg.png");
+    background-image: url("../assets/img/elements/header/header_bg.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
